# stbrumme-hash-library

./: CMakeLists.txt  crc32.cpp  crc32.h  digest.cpp  hash.h  hmac.h  keccak.cpp  keccak.h  md5.cpp  md5.h  readme.md  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha3.cpp  sha3.h
tests/: github-issue2.cpp  github-issue6.cpp  tests.cpp
